--- a/src/components/pages/Intro/Intro.module.css
+++ b/src/components/pages/Intro/Intro.module.css
@@ -1,18 +1,19 @@
 .Section-rounded {
   padding-top: 5rem;
+  background-color: var(--brand-color-canvas-default);
 }
 
 @media screen and (min-width: 48rem) {
   .Section-rounded {
-      padding-top: 0rem;
+    padding-top: 0rem;
   }
 }
 
 @media (max-width: 767px) {
   .Center-until-medium {
-      max-width: 488px;
-      margin-right: auto;
-      margin-left: auto;
+    max-width: 488px;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 
